--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor/gems/mounter"]
 	path = vendor/gems/mounter
 	url = git://github.com/rpmessner/mounter.git
+[submodule "vendor/packages/bootstrap"]
+	path = vendor/packages/bootstrap
+	url = https://github.com/twitter/bootstrap.git
